--- a/public/css/index.css
+++ b/public/css/index.css
@@ -191,3 +191,9 @@ body {
     padding: 1em 0;
     border-bottom: 1px solid #bdbdbd;
 }
+
+.asset-img, .asset-audio, .asset-video, .asset-iframe {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+}
