--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,7 +4,7 @@ body {
     background: #000000;
     max-width: 100vw;
     max-height: 100vh;
-    overflow: hidden;
+    overflow: scroll;
     font-family: Helvetica;
 }
 
@@ -80,10 +80,20 @@ body {
     outline: none;
 }
 
+#text-input form {
+    -webkit-appearance: none;
+    margin:  0;
+    width: 100%;
+    height: 100%;
+    max-height: 200px;
+    border: none;
+    outline: none;
+}
+
 #text-input textarea, #messenger {
     height: auto;
     min-height: 50px;
-    max-height: 150px;
+    max-height: 100px;
     overflow-y: scroll;
     overflow-x: hidden;
     outline: none;
@@ -127,6 +137,10 @@ body {
     position: absolute;
     z-index: -1;
 }
+#file-preview-container {
+    max-height: 75px;
+    overflow: scroll;
+}
 .file-preview {
     text-align: right;
     font-size: 12px;
@@ -141,15 +155,6 @@ body {
 .remove {
     cursor: pointer;
     padding: 1em;
-}
-
-#text-input form {
-    -webkit-appearance: none;
-    margin:  0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
 }
 
 #send {
@@ -171,7 +176,7 @@ body {
 
 #msg-container {
     padding: 0 1em;
-    max-height: 70vh;
+    max-height: 60vh;
     height: 100%;
     overflow: scroll;
 }
